# vibevm

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTINUE.md  Cargo.toml  DEV-GUIDE.md  GEMINI.md  LICENSE.md  MEMORY.md  README.md  ROADMAP.md  RUNTIME-GUIDE.md  SPECSPACES.md  TASKS.md  VIBEVM-SPEC.md  WORKSPACES.md  conform-baseline.json  conform.toml  mirrors.toml  specmap-ratchet.json  specmap.json  specmap.toml  sync-engines.toml  vibe.toml
crates/conform-core/: Cargo.toml
crates/conform-core/src/: baseline.rs  config.rs  facts.rs  finding.rs  lib.rs  rules.rs  sarif.rs  store.rs
crates/conform-core/src/rules/: budget.rs  diagnostics.rs  mod.rs  structure.rs  tests.rs
crates/specmap-core/: Cargo.toml
crates/specmap-core/src/: config.rs  explain.rs  index.rs  ledger.rs  lib.rs  mdspec.rs  ratchet.rs  rscan.rs  testgate.rs  tripwire.rs
crates/vibe-actions/: Cargo.toml
crates/vibe-actions/src/: action.rs  address.rs  aiui.rs  context.rs  gate.rs  i18n.rs  invoke.rs  keymap.rs  lib.rs  params.rs  registry.rs
crates/vibe-actions/src/search/: matcher.rs  mod.rs  tests.rs
crates/vibe-check/: Cargo.toml
crates/vibe-check/src/: lib.rs
crates/vibe-check/src/checks/: activation_conflict.rs  boot_directory.rs  features_graph.rs  i18n_coverage.rs  lockfile_files.rs  manifest_validity.rs  mod.rs  redirect_block.rs  review_aging.rs  subskill_structure.rs  wal_freshness.rs  wal_wellformed.rs
crates/vibe-check/tests/: check_cells_oracle.rs
crates/vibe-cli/: Cargo.toml
crates/vibe-cli/resources/: package-tree.schema.v1.json
crates/vibe-cli/src/: cli.rs  exit_code.rs  main.rs  output.rs  registry.rs
crates/vibe-cli/src/cli/: agentic.rs  aiui.rs  inspect.rs  man.rs  pkg.rs  prefs.rs  skill.rs  term.rs  vars.rs  vvm.rs
crates/vibe-cli/src/commands/: aiui.rs  bin.rs  check.rs  init.rs  install.rs  list.rs  mcp.rs  mod.rs  outdated.rs  registry.rs  reinstall.rs  search.rs  search_cache.rs  search_full_scan.rs  short_name.rs  show.rs  skill_template.md  term.rs  trace.rs  uninstall.rs  update.rs  vars.rs  workspace.rs
crates/vibe-cli/templates/: boot-00-core.md  boot-90-user.md  root-gitignore
crates/vibe-cli/tests/: cli_e2e.rs  cli_init.rs  cli_live_e2e.rs  cli_mcp_kind.rs  cli_pkg_cycle.rs  cli_redirect.rs  cli_registry_mgmt.rs  cli_search.rs  cli_workspace_publish.rs  man.rs  tree_fixture.rs  tree_json.rs  vvm.rs
crates/vibe-core/: Cargo.toml
crates/vibe-core/src/: capability_ref.rs  content_hash.rs  error.rs  global_registry.rs  lib.rs  package_ref.rs  rel_path.rs  settings.rs  timestamp.rs  user_config.rs  values.rs
crates/vibe-index/: Cargo.toml  README.md
crates/vibe-index/docs/: consumer-protocol.md  format.md  operator-handbook.md
crates/vibe-index/src/: content_hash.rs  error.rs  lib.rs  lock.rs  lockfile.rs  main.rs
crates/vibe-index/src/cli/: add.rs  (+15 more)
crates/vibe-index/tests/: cli_lifecycle.rs  cli_read.rs  cli_write.rs  content_hash_parity.rs  from_github_e2e.rs  rate_limit_e2e.rs  scanner_e2e.rs  seam_fakes.rs  server_e2e.rs  server_writes.rs
crates/vibe-install/: Cargo.toml
crates/vibe-install/src/: apply.rs  fetched.rs  lib.rs  plan.rs  record.rs
crates/vibe-install/tests/: incremental_in_place.rs
crates/vibe-launcher/: Cargo.toml  build.rs
crates/vibe-launcher/src/: lib.rs
crates/vibe-mcp/: Cargo.toml
crates/vibe-mcp/src/: agent_config.rs  agentic.rs  agents.rs  install.rs  jsonrpc.rs  lib.rs  pkg_servers.rs  pkgskill.rs  skill_template.md  tcg.rs  tools.rs  transport.rs
crates/vibe-mcp/tests/: agents.rs  tcg_tools.rs  tools_oracle.rs
crates/vibe-publish/: Cargo.toml
crates/vibe-publish/src/: creator.rs  direct_git.rs  git_publish.rs  github.rs  gitverse.rs  lib.rs  orchestrator.rs  post_hook.rs  redirect_sync.rs  token.rs
crates/vibe-publish/tests/: post_hook.rs
crates/vibe-registry/: Cargo.toml
crates/vibe-registry/src/: error.rs  git_package_registry.rs  git_registry.rs  index_client.rs  lib.rs  local_registry.rs  multi_registry_resolver.rs  registry_cache.rs  shippable.rs  vendor.rs
crates/vibe-registry/tests/: index_fast_path.rs  index_search.rs  registry_cells_oracle.rs
crates/vibe-resolver/: Cargo.toml
crates/vibe-resolver/src/: activation.rs  conditional.rs  embedded_provider.rs  features.rs  lib.rs  local_composite_provider.rs  local_registry_provider.rs  multi_registry_provider.rs  naive.rs  sat.rs
crates/vibe-resolver/tests/: differential_oracle.rs  embedded_provider.rs  sat_smoke.rs  solver_properties.proptest-regressions  solver_properties.rs
crates/vibe-settings/: Cargo.toml
crates/vibe-settings/src/: error.rs  lib.rs  loader.rs
crates/vibe-settings/tests/: golden_e2e.rs
crates/vibe-spec/: Cargo.toml
crates/vibe-spec/src/: address.rs  directives.rs  doctree.rs  embed.rs  lib.rs  link_table.rs  markers.rs  merge.rs  pipeline.rs  resolver.rs  use_graph.rs
crates/vibe-spec/tests/: compile.rs  embed.rs  resolve.rs
crates/vibe-tcg/: Cargo.toml
crates/vibe-tcg/src/: lib.rs  registry.rs
crates/vibe-workspace/: Cargo.toml
crates/vibe-workspace/src/: bins.rs  boot.rs  boot_artifacts.rs  expand.rs  freshness.rs  hooks.rs  install.rs  lib.rs  publish.rs  vibedeps.rs
research/rust-demo/: .gitignore  Cargo.toml  README.md  conform-baseline.json  conform.toml  specmap.json  specmap.toml  vibe.toml
research/rust-demo/spec/: PROP-001.md
services/vibe-index/: Cargo.toml  README.md
services/vibe-index/docs/: format.md
services/vibe-index/src/: content_hash.rs  error.rs  lib.rs
services/vibe-index/tests/: cli_lifecycle.rs  cli_read.rs  cli_write.rs  content_hash_parity.rs  from_github_e2e.rs  help_smoke.rs  rate_limit_e2e.rs  scanner_e2e.rs  server_e2e.rs
vibedeps/flow-discipline-core/0.6.0/: Cargo.toml
vibedeps/mcp-discipline-rust/0.5.0/: Cargo.toml
vibedeps/stack-rust-ai-native/0.5.0/: Cargo.toml  README.md  specmap.toml  vibe.toml
vibedeps/stack-typescript-ai-native-lang/0.6.0/: Cargo.toml  vibe.toml
xtask/: Cargo.toml
xtask/src/: codegen.rs  conform.rs  health.rs  main.rs  mirror.rs  specmap.rs  sync_engines.rs  trace.rs
(+1118 files in other folders)
