[workspace]
resolver = "3"
# Code-bearing packages (PROP-024 §2.4) carry their own Cargo workspaces; the
# materialised install slots under vibedeps/ do too. Exclude both trees so this
# root workspace does not try to absorb them, while members below still path-dep
# into them.
exclude = ["packages", "vibedeps"]
members = [
    "crates/vibe-cli",
    "crates/vibe-core",
    "crates/vibe-graph",
    "crates/vibe-index",
    "crates/vibe-install",
    "crates/vibe-registry",
    "crates/vibe-resolver",
    "crates/vibe-llm",
    "crates/vibe-mcp",
    "crates/vibe-check",
    "crates/vibe-publish",
    "crates/vibe-wire",
    "crates/vibe-workspace",
    "xtask",
]
default-members = [
    "crates/vibe-cli",
    "crates/vibe-core",
    "crates/vibe-graph",
    "crates/vibe-index",
    "crates/vibe-install",
    "crates/vibe-registry",
    "crates/vibe-resolver",
    "crates/vibe-llm",
    "crates/vibe-mcp",
    "crates/vibe-check",
    "crates/vibe-publish",
    "crates/vibe-wire",
    "crates/vibe-workspace",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Chirukhin"]
license-file = "LICENSE.md"
publish = false
repository = "https://gitverse.ru/anarchic/vibevm"
homepage = "https://gitverse.ru/anarchic/vibevm"
description = "The disciplined runtime for spec-driven vibecoding"
keywords = ["spec-driven", "ai", "cli", "package-manager"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Local crates
vibe-core = { path = "crates/vibe-core", version = "0.1.0-dev" }
vibe-graph = { path = "crates/vibe-graph", version = "0.1.0-dev" }
vibe-install = { path = "crates/vibe-install", version = "0.1.0-dev" }
vibe-registry = { path = "crates/vibe-registry", version = "0.1.0-dev" }
vibe-resolver = { path = "crates/vibe-resolver", version = "0.1.0-dev" }
vibe-llm = { path = "crates/vibe-llm", version = "0.1.0-dev" }
vibe-mcp = { path = "crates/vibe-mcp", version = "0.1.0-dev" }
vibe-check = { path = "crates/vibe-check", version = "0.1.0-dev" }
vibe-publish = { path = "crates/vibe-publish", version = "0.1.0-dev" }
vibe-wire = { path = "crates/vibe-wire", version = "0.1.0-dev" }
vibe-workspace = { path = "crates/vibe-workspace", version = "0.1.0-dev" }

# Code-bearing package crates (PROP-024): the ENGINE-CONFORM + specmap
# traceability toolchains live in the discipline packages, consumed by
# external path-dep. The vibevm root excludes packages/ + vibedeps/, so these
# resolve into each package's own Cargo workspace. Path-only — the crate
# versions are the packages' concern. The neutral engine crates
# (core-ai-native-conform, core-ai-native-specmap, core-ai-native-specmark) are
# AUTHORED in flow:org.vibevm.ai-native/core-ai-native and consumed here through the Rust
# stack's VENDORED copies (crates/vendor/*, `cargo xtask sync-engines`), so the
# whole root dependency graph builds ONE copy of each engine — the same copy the
# stack's own crates use. They keep their short local dep KEYS (`conform-core`,
# `specmap-core`, `specmark`) via Cargo's `package =` rename so the ~300
# `specmark::scope!` dogfood sites + xtask stay untouched (PROP-028 §2.4: the
# crate IDENTITY carries the family stem; the use-path alias does not).
conform-core = { package = "core-ai-native-conform", path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/vendor/core-ai-native-conform" }
rust-ai-native-conform-frontend = { path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/rust-ai-native-conform-frontend" }
rust-ai-native-conform = { path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/rust-ai-native-conform" }
rust-ai-native-cli = { path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/rust-ai-native-cli" }
rust-ai-native-env-audit = { path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/rust-ai-native-env-audit" }
specmap-core = { package = "core-ai-native-specmap", path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/vendor/core-ai-native-specmap" }
rust-ai-native-specmap = { path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/rust-ai-native-specmap" }
specmark = { package = "core-ai-native-specmark", path = "packages/org.vibevm.ai-native/rust-ai-native-lang/v0.7.0/crates/vendor/core-ai-native-specmark" }

# Third-party (all permissive licenses — PROP-000 §3)
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
toml_edit = "0.23"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
semver = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
# `preserve_order` keeps a parsed JSON document's existing key order on
# round-trip (Map → IndexMap), so merging vibevm's MCP entry into a
# user's `~/.claude.json` / agent config appends rather than alphabetising
# their whole file. The committed gate artefacts are immune: specmap.json
# serialises derived structs + pre-sorted Vecs, vibe.lock is TOML.
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2"
glob = "0.3"
resolvo = "0.11"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }

# Dev / test
assert_cmd = "2"
predicates = "3"
tempfile = "3"
trybuild = "1"
proptest = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
