[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Project tooling — codegen, drift checks, and other build-time helpers"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
specmap-core.workspace = true
specmap-cli-rust.workspace = true
walkdir.workspace = true
conform-cli-rust.workspace = true
conform-core.workspace = true
conform-frontend-rust.workspace = true
discipline-cli-rust.workspace = true

[dev-dependencies]
tempfile.workspace = true
