[package]
name = "specmap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The specmap engine (PROP-014 §2.5): markdown unit parser, source scanner, canonical index, xfail-strict test gate, debt tripwires"

[dependencies]
specmark-grammar.workspace = true
vibe-wire.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true
glob.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
