[package]
name = "vibe-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Frontend-agnostic, addressable action system for vibevm (PROP-039)"

[dependencies]
specmark.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true }
