[package]
name = "vibe-check"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic spec linter for vibevm projects (M1+)"

[dependencies]
vibe-core.workspace = true
vibe-resolver.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
