[package]
name = "vibe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The `vibe` CLI — entry point for vibevm"

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
vibe-core.workspace = true
vibe-graph.workspace = true
vibe-registry.workspace = true
vibe-install.workspace = true
vibe-check.workspace = true
anyhow.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
toml.workspace = true
vibe-core.workspace = true
serde_json.workspace = true
walkdir.workspace = true
