[package]
name = "vibe-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The `vibe` CLI — entry point for vibevm"

[[bin]]
name = "vibe"
path = "src/main.rs"

[dependencies]
specmark.workspace = true
vibe-core.workspace = true
vibe-actions.workspace = true
vibe-graph.workspace = true
vibe-install.workspace = true
vibe-registry.workspace = true
vibe-resolver.workspace = true
vibe-check.workspace = true
vibe-publish.workspace = true
vibe-workspace.workspace = true
vibe-mcp.workspace = true
vibe-settings.workspace = true
vibe-wire.workspace = true
vibe-spec.workspace = true
semver.workspace = true
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
# `vibe tree` interactive TUI (PROP-036 §2.11).
rat-salsa.workspace = true
rat-widget.workspace = true
ratatui-core.workspace = true
ratatui-widgets.workspace = true
ratatui-crossterm.workspace = true
# `vibe tree -t` "no project here" native folder picker (VIBE-LAUNCHERS): when
# VibeTree is launched outside any project and none was opened before.
rfd = { version = "0.15", default-features = false }
# CDP attach to the running vibeterm Electron page (`vibe aiui inspect`) — PROP-042.
chromiumoxide.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
rust-ai-native-env-audit.workspace = true
predicates.workspace = true
toml.workspace = true
vibe-core.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
jsonschema.workspace = true
