[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, manifest schemas, and graph model for vibevm"

[dependencies]
specmark.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
semver.workspace = true
indexmap.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
