[package]
name = "vibe-install"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Structured install error types for the vibe CLI"

[dependencies]
thiserror.workspace = true
