[package]
name = "vibe-launcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GUI launchers for vibevm apps (VibeTree, VibeTerm, VibeFrame) — PROP-043"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vibetree"
path = "src/bin/vibetree.rs"

[[bin]]
name = "vibeterm"
path = "src/bin/vibeterm.rs"

[[bin]]
name = "vibeframe"
path = "src/bin/vibeframe.rs"

[dependencies]
specmark.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    # GetConsoleProcessList / GetConsoleWindow — tell a double-click from a shell
    # launch, and hide our own console on the double-click path.
    "Win32_System_Console",
] }

[target.'cfg(windows)'.build-dependencies]
# per-binary icon embedding (vibetree.exe ≠ vibeterm.exe) via
# `cargo:rustc-link-arg-bin`; winres embeds one icon crate-wide, which cannot
# distinguish the launchers.
embed-resource = "3"
