[package]
name = "vibe-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol server for vibevm — exposes installed packages and subskills to coding agents over stdio JSON-RPC"

[dependencies]
specmark.workspace = true
vibe-core.workspace = true
vibe-tcg.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
