[package]
name = "vibe-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Registry fetch, cache, and resolution for vibevm packages"

[dependencies]
specmark.workspace = true
vibe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
semver.workspace = true
sha2.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
axum.workspace = true
tokio.workspace = true
