[package]
name = "vibe-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Three-level, schema-first, introspectable application/user preferences for vibevm (PROP-040)"

[dependencies]
specmark.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
# `toml_edit` is the comment-preserving write engine for the persist cell
# (PROP-040 §6 #diff-from-default, phase 2.7): a `DocumentMut` round-trips an
# operator's header comments + role-marker where the `toml` crate's serialiser
# would discard them. Pinned at the workspace level (PROP-040 §12 #crate-boundary).
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
