[package]
name = "vibe-spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
description = "spec:// addressing, the document IR, and the deterministic router (PROP-035)"

[dependencies]
thiserror.workspace = true
