[package]
name = "vibe-tcg"
description = "The portable tcg tool family (PROP-026): descriptors, schemas, run logic, and the per-language oracle registry behind a narrow TcgHost seam -- zero vibe-mcp imports, mountable by any MCP server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
specmark = { workspace = true }
thiserror = { workspace = true }
vibe-core = { workspace = true }
vibe-workspace = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
