[package]
name = "vibe-index"
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Chirukhin"]
publish = false
description = "Standalone package index utility for vibevm-shaped registries"
homepage = "https://gitverse.ru/anarchic/vibevm"
repository = "https://gitverse.ru/anarchic/vibevm"
keywords = ["vibevm", "package-index", "metadata", "spec-driven"]
categories = ["command-line-utilities", "development-tools"]
default-run = "vibe-index"

[workspace]
# Standalone workspace per spec://vibevm/modules/vibe-index/PROP-005#distribution.
#
# `services/vibe-index/` is deliberately outside the top-level vibevm
# `crates/` workspace so an org owner who wants to host their own index
# server can vendor just this subdirectory and `cargo install --path .`
# without pulling the rest of vibevm. The empty `[workspace]` table
# tells Cargo "this is a workspace root", which prevents the parent
# directory's workspace from absorbing this package.

[lib]
name = "vibe_index"
path = "src/lib.rs"

[[bin]]
name = "vibe-index"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
tempfile = "3"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net", "time", "fs"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
