# org.vibevm/discipline-core — the language-neutral Discipline package,
# code-bearing since 0.4.0 (PROP-024; DEFERRALS-CLOSEOUT-PLAN v0.1 Phase 1).
# It AUTHORS the neutral engine crates — the conform fact/rule engine, the
# specmap traceability engine, and the specmark tag bootstrap pair — that
# every language stack ships as byte-identical vendored copies under its own
# `crates/vendor/` (`cargo xtask sync-engines` mirrors them; `--check` gates
# drift). The per-language FRONTENDS and CLI drivers stay in the stacks;
# this package owns what no single language owns.
[workspace]
resolver = "3"
members = [
    "crates/conform-core",
    "crates/specmap-core",
    "crates/specmark",
    "crates/specmark-grammar",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.93"
authors = ["Oleg Chirukhin"]
license-file = "LICENSE.md"
publish = false
repository = "https://gitverse.ru/anarchic/vibevm"
homepage = "https://gitverse.ru/anarchic/vibevm"

[workspace.dependencies]
# Internal crates — path-only (not published; consumed in-tree).
specmark = { path = "crates/specmark" }
specmark-grammar = { path = "crates/specmark-grammar" }

# Third-party (all permissive licenses — PROP-000 §3). Feature sets match
# vibevm's so the engines behave identically wherever they are built.
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
toml = "0.9"
walkdir = "2"
glob = "0.3"
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# Dev / test
tempfile = "3"
